--- a/app/modules/application/templates/application.hbs
+++ b/app/modules/application/templates/application.hbs
@@ -1,8 +1,7 @@
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12">
-			{{outlet}}
-		</div>
-	</div>
+<div class="navbar-header nav-back">
+  <img class="col-xs-4" src="/assets/img/logo.png">
+  <span class="sub-title">CX</span> 
 </div>
+	
+{{outlet}}
 
