--- a/app/modules/application/templates/application.hbs
+++ b/app/modules/application/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class="navbar-header nav-back">
-  <img class="col-xs-4" src="/assets/img/logo.png">
-  <span class="sub-title">CX</span> 
+  <img class="nav-content" src="/assets/img/logo.png">
+  <span class="nav-content sub-title">CX</span> 
 </div>
 	
 {{outlet}}
