fixes issue with routing

--- a/app/modules/application/templates/responses.hbs
+++ b/app/modules/application/templates/responses.hbs
@@ -19,7 +19,7 @@
       </div>  
       <div class="row bot-pad">
         <div class="col-xs-2">
-          <p class="btn btn-primary form-control">{{#link-to 'response' this}}View{{/link-to}}</p>
+          <p class="btn btn-primary form-control">{{#link-to 'response' id}}View{{/link-to}}</p>
         </div>
       </div>
     </div>  
