--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,3 +1,7 @@
+/*****************
+***GENERAL
+*****************/
+
 body {
   background-color:#EAEAE8;
   font-size:1.6em;
@@ -6,6 +10,35 @@ body {
 a {
   color:white;
 }
+
+.space-bot-1 {
+  margin-bottom:10px;
+}
+
+/*****************
+***HEADER
+*****************/
+
+.nav-back {
+  background-color: #5B5A4B;
+  width:100%;
+}
+
+.nav-content {
+  padding:15px 0px;
+  height:115px;
+}
+
+.sub-title {
+  vertical-align: middle;
+  color:white;
+  font-size:2.5em;
+  font-weight:100;
+}
+
+/*****************
+***CONTENT
+*****************/
 
 .response-wrapper {
   width:95%;
@@ -77,29 +110,4 @@ p.question {
 .abs {
   position:absolute;
   top:155px;
-}
-
-.nav-back {
-  background-color: #5B5A4B;
-  width:100%;
-}
-
-.nav-content {
-  padding:15px 0px;
-  height:115px;
-}
-
-.sub-title {
-  vertical-align: middle;
-  color:white;
-  font-size:2.5em;
-  font-weight:100;
-}
-
-.space-top-3 {
-  margin-top:30px;
-}
-
-.space-bot-1 {
-  margin-bottom:10px;
 }
